--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,17 +5,17 @@
 }
 
 body {
-  background-color: #0A0F22; 
+  background-color: #ffffff; 
   color: #083d77;
   font-family: 'Roboto', sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #F0F4F8; 
+  color: #051c34; 
 }
 
 p {
-  color: #BAC7CC
+  color: #03455f
 }
 
 a, .highlight {
